got my contact form to show correctly on smaller screens, made sure welcome image and text re-size properly

--- a/public_html/css/frontend-styles.css
+++ b/public_html/css/frontend-styles.css
@@ -11,6 +11,12 @@ body {
 	background-color: #000;
 }
 
+@media screen and (max-width: 750px){
+	body {
+		padding-top: 10px;
+	}
+}
+
 p {
 	font-family: 'Open Sans', sans-serif;
 }
@@ -112,13 +118,13 @@ h1, h2, h3 {
 	color: #ffc800;
 }
 
-/******************************************
-* homepage/welcome page layout and style
-********************************************/
+/**********************************************************
+***           homepage media layout and style           ***
+ **********************************************************/
 .homepage-box-text {
 	background: rgba(0, 0, 0, 0.5);
 	align-self: center;
-	flex: 1 0 auto;
+	flex: 1 0 0;
 	padding: 2%;
 	/*justify-content: flex-start;*/
 }
@@ -129,7 +135,6 @@ h1, h2, h3 {
 
 .welcome-box {
 	background: url("../images/desk-scene-bw.jpg") no-repeat center center;
-	background-size: 100%;
 	min-height: 600px;
 	margin: 10px 10px 10px 10px;
 	display: flex;
@@ -175,7 +180,18 @@ h1, h2, h3 {
 	display: flex;
 }
 
-/*************************************************
+/**********************************************************
+***           homepage media queries                    ***
+ **********************************************************/
+@media only screen and (min-width: 992px) {
+	.welcome-box {
+		background-size: 100%;
+		margin: 10px 10px;
+		min-height: 600px;
+	}
+}
+
+/*********************************************************
  ** now we are moving to the portfolio section of my site
  **********************************************************/
 #portfolio-section {
@@ -232,8 +248,8 @@ h1, h2, h3 {
 }
 
 /************************************************************
-** this is the contact form starting with the way I hide it
-**************************************************************/
+***   contact form starting with the way I hide it        ***
+*************************************************************/
 .reveal {
 	margin-bottom: 700px;
 	-webkit-background-size: cover;
@@ -245,15 +261,28 @@ h1, h2, h3 {
 	z-index: 2;
 }
 
-footer {
+#contact-section {
 	padding: 80px 0;
+	margin: 0 20px;
 	background-color: #000;
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
-	/*font-size: 2em;*/
 	position: fixed;
 	bottom: 0;
 	left: 50px;
 	right: 0;
 	z-index: 1;
+}
+
+@media only screen and (max-width: 751px), screen and (max-height: 675px) {
+	#contact-section {
+		position: relative;
+		left: 0px;
+		padding: 0px;
+		margin: 5px;
+		z-index: 2;
+	}
+	.reveal {
+		margin-bottom: 10px;
+	}
 }
